@@ -99,6 +99,7 @@ enum RETURN_STATUS {
   STATUS_UNIT_MISSING = 13,
   STATUS_UNIT_INVALID = 14,
   STATUS_INVALID_OPTION_COMBINATION = 15,
+  STATUS_INPUT_LIST_TERMINATED = 16,
 };
 
 
